--- a/_tooltips.scss
+++ b/_tooltips.scss
@@ -41,6 +41,18 @@ $highlight: #e4f7f9 !default;
 	opacity: 1;
 }
 
+.js-hasfocus:before {
+	content: "";
+	display: block !important;
+	background: rgba(255, 255, 0, 0.25);
+	position: absolute;
+	top: -10px;
+	left: -10px;
+	right: -10px;
+	bottom: -10px;
+	border: 1px solid rgba(255, 255, 0, 0.5);
+	border-radius: 3px;
+}
 
 // move tooltips to the top if a narrow display
 @media only screen and (max-width: 750px) {
