--- a/_tooltips.scss
+++ b/_tooltips.scss
@@ -48,35 +48,39 @@ $highlight: #e4f7f9 !default;
 // however there's an issue in FF that means you can't select the contents of text
 // inputs on the initial mousedown.
 //
-// .hasfocus:before {
-// 	content: " ";
-// 	display: block !important;
-// 	background: rgba(255, 255, 0, 0.25);
-// 	position: absolute;
-// 	z-index:0;
-// 	top: -10px;
-// 	left: -10px;
-// 	right: -10px;
-// 	bottom: -10px;
-// 	border: 1px solid rgba(255, 255, 0, 0.5);
-// 	border-radius: 3px;
-// }
+.form__field.hasfocus:before {
+	content: " ";
+	display: block !important;
+	background: rgba(255, 255, 0, 0.25);
+	position: absolute;
+	z-index:0;
+	top: -10px;
+	left: -10px;
+	right: -10px;
+	bottom: -10px;
+	border: 1px solid rgba(255, 255, 0, 0.5);
+	border-radius: 3px;
+}
+.no-form-highlights .hasfocus:before {
+	content: none;
+}
+
 //
 // ALTERNATIVE APPROACH
-.form__field.hasfocus {
-	$highlight-padding: 10px;
-	$border-width: 1px;
+// .form__field.hasfocus {
+// 	$highlight-padding: 10px;
+// 	$border-width: 1px;
 
-	background: rgba(255, 255, 0, 0.25);
-	position: relative;
-	top: -($highlight-padding+$border-width);
-	margin-left: -($highlight-padding+$border-width);
-	margin-right: -($highlight-padding);
-	margin-bottom: -10px;
-	padding: $highlight-padding $highlight-padding;
-	border-radius: 3px;
-	border: $border-width solid rgba(255, 255, 0, 0.5);
-}
+// 	background: rgba(255, 255, 0, 0.25);
+// 	position: relative;
+// 	top: -($highlight-padding+$border-width);
+// 	margin-left: -($highlight-padding+$border-width);
+// 	margin-right: -($highlight-padding);
+// 	margin-bottom: -10px;
+// 	padding: $highlight-padding $highlight-padding;
+// 	border-radius: 3px;
+// 	border: $border-width solid rgba(255, 255, 0, 0.5);
+// }
 
 
 
